--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,24 @@
 body {
     width: 20rem;
 }
+
+h1, h2 {
+    text-align: center;
+}
+
+li {
+    list-style-type: none;
+}
+
+.button-table {
+    margin: 0 auto;
+}
+
+.button-table th {
+    text-align: center;
+}
+
+
+button {
+    width: 100px;
+}
