--- a/src/css/add.css
+++ b/src/css/add.css
@@ -1,19 +1,32 @@
 .new-site-entry-container {
     justify-content: center;
     display: flex;
-    flex-direction: column;
     align-items: center;
 }
 
 .new-site-entry-container label, 
 .new-site-entry-container input {
-    width: 80%;
+    width: 70%;
     
 }
 
-.return-btn {
-    align-self: center;
+#add-site-form {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    text-align: center;
+}
+
+#add-site-form label,
+#add-site-form input {
+    width: 100%;
+}
+
+#add-site-form input[type="submit"] {
+    width: 70%;
     margin-top: 10px;
+}
+
+.return-btn {
+    display: block;
+    margin-top: 10px auto;
 }
