--- a/src/css/add.css
+++ b/src/css/add.css
@@ -2,6 +2,7 @@
     justify-content: center;
     display: flex;
     align-items: center;
+    flex-direction: column; 
 }
 
 .new-site-entry-container label, 
@@ -23,10 +24,10 @@
 
 #add-site-form input[type="submit"] {
     width: 70%;
-    margin-top: 10px;
+    margin-top: 20px;
 }
 
-.return-btn {
-    display: block;
-    margin-top: 10px auto;
+.return-button {
+    display: flex;
+    margin-top: 10px;
 }
